Using new api to create empty ojalgo arrays