@@ -18,7 +18,6 @@ import edu.agh.iga.adi.giraph.direction.io.data.IgaMessageWritable;
 import edu.agh.iga.adi.giraph.direction.io.data.IgaOperationWritable;
 import edu.agh.iga.adi.giraph.direction.performance.MemoryLogger;
 import lombok.val;
-import org.apache.giraph.comm.flow_control.StaticFlowControl;
 import org.apache.giraph.conf.*;
 import org.apache.giraph.io.VertexInputFormat;
 import org.apache.giraph.partition.ByteArrayPartition;
@@ -47,7 +46,6 @@ import static org.apache.commons.lang3.StringUtils.join;
 import static org.apache.giraph.comm.flow_control.CreditBasedFlowControl.MAX_NUM_OF_OPEN_REQUESTS_PER_WORKER;
 import static org.apache.giraph.comm.flow_control.CreditBasedFlowControl.MAX_NUM_OF_UNSENT_REQUESTS;
 import static org.apache.giraph.comm.messages.MessageEncodeAndStoreType.BYTEARRAY_PER_PARTITION;
-import static org.apache.giraph.comm.netty.NettyClient.LIMIT_NUMBER_OF_OPEN_REQUESTS;
 import static org.apache.giraph.comm.netty.NettyClient.LIMIT_OPEN_REQUESTS_PER_WORKER;
 import static org.apache.giraph.conf.GiraphConstants.*;
 import static org.apache.giraph.master.BspServiceMaster.NUM_MASTER_ZK_INPUT_SPLIT_THREADS;
@@ -234,13 +232,13 @@ public class IgaConfiguration {
 
     REQUEST_SIZE_WARNING_THRESHOLD.setIfUnset(conf, 1);
     NETTY_CLIENT_THREADS.setIfUnset(conf, threadsDuringCommunication);
-    CLIENT_RECEIVE_BUFFER_SIZE.setIfUnset(conf, 32 * ONE_MB);
-    CLIENT_SEND_BUFFER_SIZE.setIfUnset(conf, 32 * ONE_MB);
-    SERVER_SEND_BUFFER_SIZE.setIfUnset(conf, 32 * ONE_MB);
-    SERVER_RECEIVE_BUFFER_SIZE.setIfUnset(conf, 64 * ONE_MB);
-    MAX_MSG_REQUEST_SIZE.setIfUnset(conf, 64 * ONE_MB);
-    MAX_VERTEX_REQUEST_SIZE.setIfUnset(conf, 64 * ONE_MB);
-    MAX_EDGE_REQUEST_SIZE.setIfUnset(conf, 64 * ONE_MB);
+    CLIENT_RECEIVE_BUFFER_SIZE.setIfUnset(conf, ONE_MB);
+    CLIENT_SEND_BUFFER_SIZE.setIfUnset(conf, ONE_MB);
+    SERVER_SEND_BUFFER_SIZE.setIfUnset(conf, ONE_MB);
+    SERVER_RECEIVE_BUFFER_SIZE.setIfUnset(conf, ONE_MB);
+    MAX_MSG_REQUEST_SIZE.setIfUnset(conf, ONE_MB);
+    MAX_VERTEX_REQUEST_SIZE.setIfUnset(conf, ONE_MB);
+    MAX_EDGE_REQUEST_SIZE.setIfUnset(conf, ONE_MB);
 
     USE_MESSAGE_SIZE_ENCODING.setIfUnset(conf, true);
 
@@ -276,6 +274,8 @@ public class IgaConfiguration {
     if (USE_G1_COLLECTOR.get(conf)) {
       gcJavaOpts.add("-XX:+UseG1GC");
       gcJavaOpts.add("-XX:MaxGCPauseMillis=500");
+      gcJavaOpts.add("-XX:+UseStringDeduplication");
+//      gcJavaOpts.add("-XX:G1HeapRegionSize=");
     } else {
       int newGenMemoryGb = Math.max(1, (int) (WORKER_MEMORY.get(conf) * NEW_GEN_MEMORY_FRACTION.get(conf)));
       // Use parallel gc collector
@@ -292,6 +292,11 @@ public class IgaConfiguration {
     return newArrayList(
         "-server",
         "-XX:ReservedCodeCacheSize=256M"
+//        "-XX:+AggressiveOpts"
+//        "-XX:MaxTrivialSize=12",
+//        "-XX:MaxInlineSize=270",
+//        "-XX:InlineSmallCode=2000",
+//        "-Djava.net.preferIPv4Stack=true"
     );
   }
 
